--- a/index.html
+++ b/index.html
@@ -18,28 +18,33 @@
                 <h4>Contact</h4>
             </div>
         </div>
-        <div class="grid grid-cols-2 m-[20px] my-[50px] p-[30px] gap-[30px]">
-            <div class=" flex flex-col p-[20px] border-1 rounded-2xl max-w-[400px] h-[300px] shadow-2xl shadow-black ">
-                <div class="flex p-[20px] text-2xl text-green-700 font-bold">
-                    <h3>Topic</h3>
+        <div class="flex justify-between m-[20px] my-[50px] p-[30px] ">
+            <div class="flex flex-col my-[30px]">
+
+                <div class=" flex flex-col p-[20px] border-1 rounded-2xl max-w-[400px] h-[300px] shadow-2xl shadow-black my-[40px]">
+                    <div class="flex p-[20px] text-2xl text-green-700 font-bold">
+                        <h3>Topic</h3>
+                    </div>
+                    <div class="text-start ">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae delectus adipisci aut corporis eius autem vel quibusdam sint aliquam. Dolores?</p>
+                    </div>
                 </div>
-                <div class="text-start ">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae delectus adipisci aut corporis eius autem vel quibusdam sint aliquam. Dolores?</p>
+                <br>
+                <div class=" flex flex-col p-[20px] border-1 rounded-2xl max-w-[400px] h-[300px] shadow-2xl shadow-black">
+                    <div class="flex p-[20px] text-2xl text-green-700 font-bold">
+                        <h3>Topic</h3>
+                    </div>
+                    <div class="text-start ">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae delectus adipisci aut corporis eius autem vel quibusdam sint aliquam. Dolores?</p>
+                    </div>
                 </div>
+
             </div>
             <div class=" flex flex-col p-[20px] border-1 rounded-2xl max-w-[400px] h-[300px] shadow-2xl shadow-black">
                 <div class="flex p-[20px] text-2xl text-green-700 font-bold">
                     <h3>Topic</h3>
                 </div>
-                <div class="text-start ">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae delectus adipisci aut corporis eius autem vel quibusdam sint aliquam. Dolores?</p>
-                </div>
-            </div>
-            <div class=" flex flex-col p-[20px] border-1 rounded-2xl max-w-[400px] h-[300px] shadow-2xl shadow-black">
-                <div class="flex p-[20px] text-2xl text-green-700 font-bold">
-                    <h3>Topic</h3>
-                </div>
-                <div class="text-start ">
+                <div class="text-end">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae delectus adipisci aut corporis eius autem vel quibusdam sint aliquam. Dolores?</p>
                 </div>
             </div>
